[project]
name = "mlelec"
version = "0.0.0"
authors = [
    # TODO
]
readme = "README.md"
# license = TODO
description = "TODO"

requires-python = ">=3.7"
dependencies = [
    "pyscf >= 2.3.0",
    "metatensor-learn",
    "metatensor-operations",
    "rascaline@git+https://github.com/Luthaf/rascaline.git@5ac2ee9e6b45f31ba608c02d6d8dd7d82b2009a9",
    "wigners",
    "torch",
    "scikit-learn",
    "numpy",
    "hickle",
    "tqdm",
#    "pyscfad@git+https://github.com/fishjojo/pyscfad.git@d9793a45314270daa00f9b3cd4e46f03f620993f"
]

keywords = [] # TODO
classifiers = [
    # TODO
]

[project.urls]
# homepage = TODO
# documentation = TODO
# repository = TODO
# changelog = TODO

### ======================================================================== ###

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

### ======================================================================== ###

[tool.isort]
profile = "black"
line_length = 88
indent = 4
include_trailing_comma = true
lines_after_imports = 2
known_first_party = "mlelec"
